--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -4,7 +4,7 @@ block seo
 
 block content
     .wrapper
-        .service
+        .service#services
             h2 Services
             span We offer ipsum dolor sit amet, consetetur sadipscing elitr amet
 
@@ -14,18 +14,25 @@ block content
             +cardTop("./img/icon.png", "Clean Typography", "a", "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.")
     .bg
         .wrapper
-            .aboutUs
+            .aboutUs#about
                 h2 About us
                 span Lorem ipsum dolor sit amet, consetetur sadipscing elitr amet
             .description 
                 p Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sediam nonumy eirmod tempor invidunt ut labore et dolore aliquyam erat, sed diam voluptua. At vero eos et accusam et justo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor et dolore aliquyam erat. Lorem ipsum dolor sit amet. Lorem ipsum eat.
                 p Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sediam nonumy eirmod tempor invidunt ut labore et dolore aliquyam erat, sed diam voluptua. At vero eos et accusam et justo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor et dolore aliquyam erat. Lorem ipsum dolor sit amet. Lorem ipsum eat.
-            .humans 
-                +humanCard("./img/human.png", "a", "Md. Khalil Uddin", "Head of Ideas")
-                +humanCard("./img/human.png", "a", "Rubel Miah", "Head of Ideas")
-                +humanCard("./img/human.png", "a", "Md. Khalil Uddin", "Head of Ideas")
-                +humanCard("./img/human.png", "a", "Md. Khalil Uddin", "Head of Ideas")
-    .latwork 
+
+            .slider
+                button.prev &larr;
+                .slider-window
+                    .slider-track
+                        .humans 
+                            +humanCard("./img/human.png", "a", "Md. Khalil Uddin", "Head of Ideas")
+                            +humanCard("./img/human.png", "a", "Rubel Miah", "Head of Ideas")
+                            +humanCard("./img/human.png", "a", "Md. Khalil Uddin", "Head of Ideas")
+                             +humanCard("./img/human.png", "a", "Md. Khalil Uddin", "Head of Ideas")
+                            +humanCard("./img/human.png", "a", "Md. Khalil Uddin", "Head of Ideas")
+                <button class="next">→</button>
+    .latwork#works    
         .ww
             h2 Latest Works
             form(action="post")
@@ -39,9 +46,9 @@ block content
                 label(for="Development") Development
                 input(type="radio" value="Strategy" name="a" id="Strategy" )
                 label(for="Strategy") Strategy
-    .shop.wrapper 
-            +mainCard("Hair Dresser", "Branding")
-            +mainCard("Hair Dresser", "Branding")
+    .shop.wrapper#Blog 
+            +mainCard("Hair Dresser", "Strategy")
+            +mainCard("Hair Dresser", "Strategy")
             +mainCard("Hair Dresser", "Branding")
             +mainCard("Hair Dresser", "Branding")
             +mainCard("Hair Dresser", "Branding")
@@ -62,4 +69,39 @@ block content
             .posts 
                 +blockPost("./img/stylchik.png", "a", "18 Oct", "Startup ideas needs to be funded", "By Khalil Uddin in Development", "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod teduntlabore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et erebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit am Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidulabore et dolore aliquyam erat, sed diam ")
                 +blockPost("./img/stylchik.png", "a", "18 Oct", "Startup ideas needs to be funded", "By Khalil Uddin in Development", "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod teduntlabore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et erebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit am Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidulabore et dolore aliquyam erat, sed diam ")  
-    
+    .company 
+        .gray 
+            .wrapper
+                .companys#Clients 
+                    img(src="/img/companyone.png", alt="")
+                    img(src="/img/companytwo.png", alt="")
+                    img(src="/img/companythree.png", alt="")
+                    img(src="/img/companyfour.png", alt="")
+                    img(src="/img/companyfive.png", alt="")
+                .qwe 
+                    +qwe("Hvaing placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum”", "John Doe, Google Inc.")
+                    input(type="radio" id="one" name="b")
+                    label(for="one") 
+                    input(type="radio" id="two" name="b")
+                    label(for="two") 
+                    input(type="radio" id="three" name="b")
+                    label(for="three") 
+    .form
+        .wrapper
+            .get 
+                h2 Get in touch
+                span Lorem ipsum dolor sit amet, consetetur sadipscing elitr amet 
+            .formas
+                .contacts#Contact
+                    +contact("Address", "312, 7th Ave, New York", "NY 101200", "United States of America")
+                    +contact("Address", "312, 7th Ave, New York", "NY 101200", "United States of America")
+                    +contact("Address", "312, 7th Ave, New York", "NY 101200", "United States of America")
+                form(action="#", method="post")
+                    input(type="text", name="a" minlength="3" maxlength="35" placeholder="Your name" required)
+                    input(type="email", name="a" minlength="3" maxlength="35" placeholder="Your E-mail" required) 
+                    input(type="text", name="a" minlength="3" maxlength="35" placeholder="Your subject" required)
+                    input(type="text", name="a" minlength="3" maxlength="35" placeholder="Company name" required)
+                    textarea(name="a" minlength="30" maxlength="350" placeholder="Your message" required)
+                    input(type="submit" value="Send message")
+                    sup *
+                    p We’ll contact you as as possible. We don’t reply on Monday.
