--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -25,7 +25,7 @@ header.header#home
         .auth-content
             h2 Login
             .blocks
-            .block(data-order='1') 1
-            .block(data-order='2') 2
-            .block(data-order='3') 3
+            .blocka(data-order='1') 1
+            .blocka(data-order='2') 2
+            .blocka(data-order='3') 3
             button#checkSequence Enter
