--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -4,7 +4,7 @@ block seo
 
 block content
     .wrapper
-        .service#services
+        .service#Services
             h2 Services
             span We offer ipsum dolor sit amet, consetetur sadipscing elitr amet
 
@@ -14,7 +14,7 @@ block content
             +cardTop("./img/icon.png", "Clean Typography", "a", "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.")
     .bg
         .wrapper
-            .aboutUs#about
+            .aboutUs#About
                 h2 About us
                 span Lorem ipsum dolor sit amet, consetetur sadipscing elitr amet
             .description 
@@ -32,7 +32,7 @@ block content
                              +humanCard("./img/human.png", "a", "Md. Khalil Uddin", "Head of Ideas")
                             +humanCard("./img/human.png", "a", "Md. Khalil Uddin", "Head of Ideas")
                 <button class="next">→</button>
-    .latwork#works    
+    .latwork#Works    
         .ww
             h2 Latest Works
             form(action="post")
@@ -46,11 +46,11 @@ block content
                 label(for="Development") Development
                 input(type="radio" value="Strategy" name="a" id="Strategy" )
                 label(for="Strategy") Strategy
-    .shop.wrapper#Blog 
+    .shop.wrapper
             +mainCard("Hair Dresser", "Strategy")
             +mainCard("Hair Dresser", "Strategy")
-            +mainCard("Hair Dresser", "Branding")
-            +mainCard("Hair Dresser", "Branding")
+            +mainCard("Hair Dresser", "Strategy")
+            +mainCard("Hair Dresser", "Strategy")
             +mainCard("Hair Dresser", "Branding")
             +mainCard("Hair Dresser", "Branding")
             +mainCard("Hair Dresser", "Branding")
@@ -61,7 +61,7 @@ block content
         h2 Do you like OUR WORK so far?
         h2 Let's talk about YOUR PROJECT!
         button Get in Touch
-    .blogposts
+    .blogposts#Blog 
         .wrapper 
             .zxc
                 h2 Recent blog posts
