--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -181,13 +181,9 @@ span
 .humans
     display: flex
     justify-content: space-evenly
-    .cardHuman
-        min-width: 200px
-        margin: 10px
+    >*
+        display: block
         text-align: center
-        >*
-            display: block
-            text-align: center
         .name
             font-size: 14rem
             line-height: 24rem
@@ -213,6 +209,10 @@ span
     form
         display: flex
         justify-content: center
+        +media(320)
+            flex-direction: column
+        +media(768)
+            flex-direction: row
         input
             display: none
         label
@@ -364,6 +364,8 @@ span
             +media(320)
                 flex-direction: column
                 align-items: center
+            +media(1024)
+                flex-direction: row
             &:hover
                 h3,
                 i,
@@ -374,6 +376,8 @@ span
                 align-items: center
                 +media(320)
                     flex-direction: column
+                +media(1024)
+                    flex-direction: row
             .imgblock
                 display: inline-block
             .mainInfo
@@ -393,6 +397,8 @@ span
                     font-family: "Roboto Slab"
                     +media(320)
                         text-align: center
+                    +media(1024)
+                        text-align: left
                 .dateSpan
                     display: table-caption
                     padding: 10px
@@ -436,6 +442,8 @@ span
                     text-align: center
                     +media(320)
                         display: block
+                    +media(1024)
+                        display: inline-block
 
 .gray
     background-color: #f8f8f8
@@ -495,9 +503,16 @@ span
 
     .formas
         display: flex
+        +media(320)
+            flex-direction: column
+        +media(768)
+            flex-direction: row
         padding: 50px 0
         .contacts
-            width: 35%
+            +media(320)
+                width: 100%
+            +media(768)
+                width: 35%
             .contact
                 >*
                     text-align: left
@@ -513,7 +528,7 @@ span
             align-items: baseline
             flex-wrap: wrap
             input,textarea
-                width: 40%
+                
                 margin: 0 20px
                 font-size: 12rem
                 line-height: 20rem
@@ -523,13 +538,23 @@ span
                 font-weight: 400
                 font-family: "Roboto Slab"
                 border: 1px solid #555
+                +media(320)
+                    width: 100%
+                    margin: 10px 0
+                +media(768)
+                    width: 40%
+                    margin: 0
             textarea
-                width: 85%
+                +media(768)
+                    width: 81%
                 min-height: 120px
                 max-height: 250px
                 resize: vertical
             input[type="submit"]
-                width: 20%
+                +media(320)
+                    width: 100%
+                +media(768)
+                    width: 20%  
                 background: #fff
             input:focus,textarea:focus
                 outline: none
@@ -542,3 +567,9 @@ span
                 color: #5f5f5f
                 font-weight: 400
                 font-family: "Roboto Slab"
+
+.cardHuman
+    padding: 10px 20px
+    min-width: 200px
+    margin: 10px
+    text-align: center
